New files added - [] Files modified - [MunicipalityUsers.html] Refactored files - [] Fixed bugs - [] Removed files - []

--- a/src/main/webapp/pages/MunicipalityUsers/MunicipalityUsers.html
+++ b/src/main/webapp/pages/MunicipalityUsers/MunicipalityUsers.html
@@ -236,7 +236,7 @@
                         <wm-composite name="composite3" required="false">
                             <wm-label class="col-md-3 control-label" name="label8786" caption="SelectUser"></wm-label>
                             <wm-container class="col-md-9" name="container6">
-                                <wm-search name="textSelectUser" dataset="bind:Variables.AllUsers.dataSet" searchkey="email" displaylabel="email" displayimagesrc="photo" datafield="id"></wm-search>
+                                <wm-search name="textSelectUser" dataset="bind:Variables.AllUsers.dataSet" searchkey="email" displaylabel="email" displayimagesrc="photo" datafield="id" placeholder="Search by Email Address"></wm-search>
                             </wm-container>
                         </wm-composite>
                     </wm-gridcolumn>
